kubernetes/apps/downloads/qbittorrent/tools/reannounce/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: qbittools-reannounce-networkpolicy
  namespace: downloads
spec:
  endpointSelector:
    matchLabels:
      name: qbittools-reannounce
  ingress:
    - {}
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            name: qbittorrent
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
